fix: resolve all compilation errors from multi-AI parallel development
- Fix Java 9+ API usage (Map.of/List.of/Stream.toList/String.repeat) for JDK 1.8 compatibility
- Fix ErrorCode.NOT_FOUND -> ErrorCode.RESOURCE_NOT_FOUND across 6 files
- Fix ApiException -> BusinessException in TenantOnboardingService
- Fix resolveWithBody parameter order in GraphController
- Fix applyExplicitFilters type mismatch (Map<String,Object> vs Map<String,String>)
- Fix KnowledgeController sync API to match KnowledgeSyncService actual methods
- Fix CdssService: OrganizationContext.builder, RuleService.evaluateForScenario return type, saveAuditLog params
- Fix SsoAuthService: IdentityBinding return type, createUser/createIdentityBinding signatures
- Fix UserSyncController: String->Long tenantId conversion
- Fix MpiService: adapterHubService.queryExternalData -> query
- Fix MpiHashUtil: String.repeat -> StringBuilder loop
- Fix bean name conflict: patientindex.MpiController -> mpiIndexController
- Fix test compilation: PublishGateServiceTest, UserSyncApiContractTests, MpiServiceTest
- All unit tests pass (MpiServiceTest 18/18, PublishGateServiceTest 11/11)

Fixes 100+ compilation errors across 38 files.